--- a/17-DivaScriptCode.tex
+++ b/17-DivaScriptCode.tex
@@ -429,7 +429,7 @@ $$\cdots$$\\
 %
 %The program \texttt{varlist.tcl} initializes the data in the dialogue boxes and the default access paths; \texttt{dictionary.tcl} is a dictionary in English and French; \texttt{tablist.tcl}: defines tables used in other subroutines.
 %
-%%\item \texttt{edit.tcl}: defines the procedures \textcom{p\_copy}, \textcom{p\_paste} and \textcom{p\_cut} ;
+%%\item \texttt{edit.tcl}: defines the procedures \command{p\_copy}, \command{p\_paste} and \command{p\_cut} ;
 %\texttt{entry.tcl}, \texttt{misc.tcl} and \texttt{xmisc.tcl} define several procedures called in other \texttt{.tcl} files.
 
 
