--- a/16-DivaProblems.tex
+++ b/16-DivaProblems.tex
@@ -22,20 +22,20 @@ Another possibility is to check the page \url{http://modb.oce.ulg.ac.be/viewsvn/
 The best option is to choose \texttt{ireg} = 0.
 
 
-In fact, \texttt{divaseminorm} performs four operations:
+In fact, \command{divaseminorm} performs four operations:
 \begin{enumerate}
-\item \texttt{divarefe} = computing a reference fields with large value for $L$ (your
+\item \command{divarefe} = computing a reference fields with large value for $L$ (your
 value multiplied by 5) and low signal-to-noise ration (your value divided
 by 10)
 
-\item \texttt{divaanom}: difference between your data and the reference fields at
+\item \command{divaanom}: difference between your data and the reference fields at
 these data points
 
-\item \texttt{divacalc}: performs a diva analysis with the parameters you put in
+\item \command{divacalc}: performs a diva analysis with the parameters you put in
 param.par, on the data anomaly. This is why you should choose ireg=0: you
 are working with anomalies, thus no need to subtract any background field.
 
-\item \texttt{divasumup}: reconstruction of the analysed field by summing the reference
+\item \command{divasumup}: reconstruction of the analysed field by summing the reference
 and anomaly fields.
 
 \end{enumerate}
@@ -70,23 +70,23 @@ to rounding if you place a request for analysis "exactly" on the boundary. In re
 %----------------------------------------------------------------------------------------------
 
 
-The latest version of \texttt{divaanom} is able to use an existing reference field. This field should be present as a binary file in the output directory with the name \texttt{fieldgher.anl.ref}, and the \texttt{GridInfo.dat} file should be present in \texttt{output/ghertonetcdf/} directory.
+The latest version of \command{divaanom} is able to use an existing reference field. This field should be present as a binary file in the output directory with the name \texttt{fieldgher.anl.ref}, and the \texttt{GridInfo.dat} file should be present in \texttt{output/ghertonetcdf/} directory.
 
-An execution of \texttt{divaanom} will provide you with \texttt{data.dat} which contains anomalies with respect to your reference field (annual analysis in this case). Then you can work with \texttt{data.dat} as usual. 
+An execution of \command{divaanom} will provide you with \texttt{data.dat} which contains anomalies with respect to your reference field (annual analysis in this case). Then you can work with \texttt{data.dat} as usual. 
 
-The last step is to apply \texttt{divasumup} to reconstruct the field by summing the anomaly analysis and the reference field.
+The last step is to apply \command{divasumup} to reconstruct the field by summing the anomaly analysis and the reference field.
 
 In summary the steps to follow are:
 
 \begin{enumerate} 
-\item apply \texttt{divadress} to the annual data (after the optimisation of the parameters),
+\item apply \command{divadress} to the annual data (after the optimisation of the parameters),
 \item copy the output \texttt{fieldgher.anl} with the name \texttt{fieldgher.anl.ref},
 \item for each month:
 \begin{enumerate}
 \item copy the corresponding data file into the input directory,
-\item apply \texttt{divaanom},
+\item apply \command{divaanom},
 \item perform an analysis on the anomalies,
-\item apply \texttt{divasumup}.
+\item apply \command{divasumup}.
 \end{enumerate}									 
 \end{enumerate}
 									 
@@ -141,11 +141,11 @@ Although you are in the correct directory, the command is not found. This is bec
 %--------------------------------------
 
 You can type \\
-\textcom{./name\_of\_the\_command}\\
+\command{./name\_of\_the\_command}\\
 so that the system knows the command is the current directory.
 
 A better solution is to adapt your path by typing:\\
-\textcom{PATH=\$PATH:.}
+\command{PATH=\$PATH:.}
 
 For example in \texttt{cygwin}:\\
 \begin{itemize}
@@ -153,7 +153,7 @@ For example in \texttt{cygwin}:\\
 \item edit file \texttt{bash.bashrc} file
 and add the following line:\\
 export \texttt{PATH=\$PATH:.}
-\item type \textcom{source bash.bashrc} in order to take into account the modification made.
+\item type \command{source bash.bashrc} in order to take into account the modification made.
 \end{itemize}
 
 
@@ -189,10 +189,10 @@ End of lines in Unix and Windows files are different, and this causes problems w
 
 Working on a individual file, the command\\
 
-\textcom{dos2unix -U name\_of\_the\_file}
+\command{dos2unix -U name\_of\_the\_file}
 
 does the conversion between Windows and Unix end of lines.
-If you have to perform the conversion on a large number of files, use the script \texttt{divados2unix} located in \texttt{diva-\divaversion}.
+If you have to perform the conversion on a large number of files, use the script \command{divados2unix} located in \texttt{diva-\divaversion}.
 
 
 
@@ -219,7 +219,7 @@ You need to recompile the sources after reducing the values of parameter \texttt
 \begin{verbatim}
       PARAMETER(nrea=150000000)
 \end{verbatim}
-Then use script \texttt{divacompile} to get the new executables (see Sec. \ref{sec:compilation}). If you get the same error message, reduce again the value of \texttt{nrea}.
+Then use script \command{divacompile} to get the new executables (see Sec. \ref{sec:compilation}). If you get the same error message, reduce again the value of \texttt{nrea}.
 
 \begin{figure}[htpb]
 \centering
@@ -235,7 +235,7 @@ Then use script \texttt{divacompile} to get the new executables (see Sec. \ref{s
 \begin{figure}[htpb]
 \centering
 \includegraphics[width=.80\textwidth]{error_netcdf}
-\caption{Error message during execution of \texttt{divacomp} with gfortran\label{fig:error_netcdf}.}
+\caption{Error message during execution of \command{divacomp} with gfortran\label{fig:error_netcdf}.}
 \end{figure}
 
 \subsubsection{\question}
@@ -246,7 +246,7 @@ The NetCDF library, required for compiling of \texttt{netcdf\-output.f}, \texttt
 \subsubsection{\answer}
 %--------------------------------------
 
-You have to make sure that \texttt{divacompile} includes the appropriate link path.
+You have to make sure that \command{divacompile} includes the appropriate link path.
 
 If this is not sufficient, you will have to rebuild the NetCDF library corresponding to your operating system. Installation and compilation procedures can be at \url{http://www.unidata.ucar.edu/software/netcdf/docs/netcdf-install/}
 
@@ -260,7 +260,7 @@ If this is not sufficient, you will have to rebuild the NetCDF library correspon
 \begin{figure}[htpb]
 \centering
 \includegraphics[width=.80\textwidth]{error_resource}
-\caption{Error message during the run of \texttt{divacalc}\label{fig:error_resource}.}
+\caption{Error message during the run of \command{divacalc}\label{fig:error_resource}.}
 \end{figure}
 
 \subsubsection{\question}
@@ -296,7 +296,7 @@ Note that maximal allowable values for these parameters depends on your compiler
 \subsubsection{\question}
 %---------------------
 
-The memory allocation is not sufficient for the \diva\,to be executed in the case you consider. This message may appear either during the mesh generation (the required mesh is too fine considering the size of the domain) or during the resolution itself (\textit{i.e.} \texttt{divacalc}).
+The memory allocation is not sufficient for the \diva\,to be executed in the case you consider. This message may appear either during the mesh generation (the required mesh is too fine considering the size of the domain) or during the resolution itself (\textit{i.e.} \command{divacalc}).
 
 \subsubsection{\answer}
 %-------------------
@@ -309,8 +309,8 @@ The solution is nearly the same as the previous case: you need to compile the so
 In some uncommon cases, you may not be able to find values of \texttt{nrea} and \texttt{nent} that will allow you to avoid both problems \ref{sec:error_resource} and \ref{sec:error_allocation}. In these cases, the recommended solution consists of:
 \begin{enumerate}
 \item Find the highest values of \texttt{nrea} and \texttt{nent} that allow you not to have message error \ref{sec:error_allocation};
-\item Generate a mesh with a value 3-5 times larger than the correlation length you want to use for the resolution; this can be done be simply editing file \texttt{./input/param.par}, changing the value of correlation length, and run \texttt{divamesh};
-\item Once the mesh is generated, edit again \texttt{param.par} and assign the correct value to the correlation length, and run an analysis with \texttt{divacalc}.
+\item Generate a mesh with a value 3-5 times larger than the correlation length you want to use for the resolution; this can be done be simply editing file \texttt{./input/param.par}, changing the value of correlation length, and run \command{divamesh};
+\item Once the mesh is generated, edit again \texttt{param.par} and assign the correct value to the correlation length, and run an analysis with \command{divacalc}.
 \end{enumerate}
 
 This procedure should help you to save memory otherwise used for the finite-element mesh. Working with a coarser mesh will not affect excessively your results.
@@ -327,13 +327,13 @@ This procedure should help you to save memory otherwise used for the finite-elem
 \begin{figure}[htpb]
 \centering
 \includegraphics[width=.80\textwidth]{error_gfortran}
-\caption{Error message during execution of \texttt{divacalc} with gfortran\label{fig:error_gfortran}.}
+\caption{Error message during execution of \command{divacalc} with gfortran\label{fig:error_gfortran}.}
 \end{figure}
 
 \subsubsection{\question}
 %--------------------------------------
 
-Although the compilation worked without any message error, \texttt{diva.a} cannot be executed. This problem seems to occur only with \textsl{gfortran} compiler under \textsf{Cygwin}. Actually the problem is not related to permission (command \textcom{chmod} will not solve the problem) but with compilation. As described in problem \ref{sec:error_resource}, values of parameters\, \texttt{nrea} and \texttt{nent} shall be decreased and the sources recompiled.
+Although the compilation worked without any message error, \texttt{diva.a} cannot be executed. This problem seems to occur only with \textsl{gfortran} compiler under \textsf{Cygwin}. Actually the problem is not related to permission (command \command{chmod} will not solve the problem) but with compilation. As described in problem \ref{sec:error_resource}, values of parameters\, \texttt{nrea} and \texttt{nent} shall be decreased and the sources recompiled.
 
 \subsubsection{\answer}
 %--------------------------
@@ -396,7 +396,7 @@ As the default value of \texttt{nm} is already large, you may also consider work
 %------------------------------------------
 
 
-After the execution of \texttt{divacalc}, you get very small input files, with only one grid point.
+After the execution of \command{divacalc}, you get very small input files, with only one grid point.
 
 \subsubsection{\question}
 %--------------------------------------
@@ -407,14 +407,14 @@ The most frequent reason is that the \texttt{param.par} file has been modified d
 \begin{figure}[htpb]
 \centering
 \includegraphics[width=.80\textwidth]{error_parampar}
-\caption{File \texttt{param.par} resulting from an interruption of \texttt{divagcv}.\label{fig:errorparampar}}
+\caption{File \texttt{param.par} resulting from an interruption of \command{divagcv}.\label{fig:errorparampar}}
 \end{figure}
 
 \subsubsection{\answer}
 %--------------------------------------
 
 
-Simply edit \textsc{param.par} to write the correct values of \texttt{nx} and \texttt{ny}, then run again \texttt{divacalc} (or \texttt{divadress}) to have an analysis on the desired grid.
+Simply edit \textsc{param.par} to write the correct values of \texttt{nx} and \texttt{ny}, then run again \command{divacalc} (or \command{divadress}) to have an analysis on the desired grid.
 
 
 
@@ -511,7 +511,7 @@ Simply convert the decimal separator (\textit{e.g.} using the commands described
 \subsubsection{Additional information}
 %-----------------------------------
 
-The behaviour of \texttt{awk} is susceptible to change the points into commas when used in \texttt{awkfilter} or other routines. To fix the problem, simply replaced
+The behaviour of \texttt{awk} is susceptible to change the points into commas when used in \command{awkfilter} or other routines. To fix the problem, simply replaced
 
 \texttt{gawk}
 
