--- a/0-DivaHeader2012.tex
+++ b/0-DivaHeader2012.tex
@@ -23,7 +23,7 @@
 \usepackage{hyperref}
 \usepackage{url}
 \usepackage{lscape}
-\usepackage{lettrine}
+%\usepackage{lettrine}
 %\usepackage{textcomp}
 \usepackage{multicol}
 \usepackage{caption}
@@ -99,7 +99,9 @@ literate={\$}{{\textcolor{red}{\$}}}1
 %-------------------------------------------------
 \renewcommand{\footrulewidth}{0.4pt}
 \renewcommand{\captionfont}{\it \small}
-\renewcommand{\LettrineFontHook}{\color[gray]{0.5}}
+
+%\renewcommand{\LettrineFontHook}{\color[gray]{0.5}}
+
 \newcommand{\example}{\underline{Example}:\,}
 \newcommand{\examples}{\underline{Examples}:\,}
 \newcommand{\be}{\begin{equation}}
@@ -119,7 +121,7 @@ literate={\$}{{\textcolor{red}{\$}}}1
 \newcommand{\plplot}{\textsf{PlPlot}}
 \newcommand{\tcltk}{\textsf{Tcl/Tk}}
 \newcommand{\divaversion}{4.3}
-\newcommand{\gnuplot}{\textsf{gnuplot}}
+\newcommand{\gnuplot\xspace}{\textsf{gnuplot}}
 \newcommand{\divawebpage}{http://modb.oce.ulg.ac.be/mediawiki/index.php/DIVA}
 
 \newcommand{\question}{Why do I get this error?}
