--- a/12-DivaPostprocessing.tex
+++ b/12-DivaPostprocessing.tex
@@ -1,7 +1,6 @@
-%DivaPostprocessing
 \chapter{Postprocessing tools\label{chap:postprocessing}}
-%\vspace*{-1cm}
-\lettrine[lines=2, loversize=-0.1, lraise=0.1]{V}{arious} tools are available to visualize gridded fields; some of them are presented in the following sections.
+
+Various tools are available to visualize gridded fields; some of them are presented in the following sections.
 
 \minitoc
 
