--- a/13-DivaExamples.tex
+++ b/13-DivaExamples.tex
@@ -1,7 +1,7 @@
 %DivaExamples
 \chapter{Realistic examples\label{chap:examples}}
-%\vspace*{-1cm}
-\lettrine[lines=2, loversize=-0.1, lraise=0.1]{A}{} few examples with real data are described in this chapter. They can act as model for users who needs to perform such kind of analysis. 
+
+A few examples with real data are described in this chapter. They can act as model for users who needs to perform such kind of analysis. 
 
 \minitoc
 
