--- a/14-DivaOnWeb.tex
+++ b/14-DivaOnWeb.tex
@@ -1,8 +1,8 @@
 \chapter{Other implementations\label{chap:divaonweb}}
 %------------------------
 
-\lettrine[lines=2, loversize=-0.1, lraise=0.1]{}{} 
-
+In addition to the usual way of working with \diva (i.e., command line), there are other possibilities to use it without the installation of the whole code.
+ 
 \minitoc
 
 \newpage %  
