--- a/16-DivaProblems.tex
+++ b/16-DivaProblems.tex
@@ -1,7 +1,7 @@
 \chapter{Problems\ldots and solutions!}
 %--------------------------------------
 
-\lettrine[lines=2]{I}{n} this chapter we present problems encountered by users and when possible, the solution for solving it \footnote{If you encounter problems/bugs not presented in the following pages, please send a bug-report to one of the author with a description of the problem and a screen-capture if possible}. 
+We present problems encountered by users and when possible, the solution for solving it \footnote{If you encounter problems/bugs not presented in the following pages, please send a bug-report to one of the author with a description of the problem and a screen-capture if possible}. 
 
 \minitoc
 
