--- a/9-DivaGeneral.tex
+++ b/9-DivaGeneral.tex
@@ -1,7 +1,7 @@
 \chapter{Description of the input files\label{chap:general}}
 %-----------------------------------------------------------
 
-\lettrine[lines=2, loversize=0.0, lraise=0.5]{T}{he} input files required by \diva for simple 2-D analysis are described here. 
+The input files required by \diva for simple 2-D analysis are described here. 
 Basically, only three files are needed as input:
 
 \begin{enumerate}
